
= ruote-dm - CHANGELOG.txt


== ruote-dm 2.2.1    not yet released

- #query_workitems fixed missing :skip option (Thanks Eric Smith)


== ruote-dm 2.2.0    released 2011/03/01

- revised get_many (to avoid duplicates)
- Ruote::Dm::Storage (keeping Ruote::Dm::DmStorage for a while)
- making sure that Storage#ids returns a sorted result
- simpler DmStorage#dump


== ruote-dm 2.1.11    released 2010/10/01

- get_many(x, y, descending => true)
- adapted for engines.processes pagination
- ! added 'wfi' column to Document table
- workitems.by_participant() :skip and :limit support
- get_many(x, y, :skip => 10) support
- get_many(x, y, :count => true) support


== ruote-dm 2.1.10    released 2010/06/15

- multi-workers hardened
- :ide key, :length => 255 for MySQL (thanks irfn)
- _rev now starting at 1 (instead of 0)


== ruote-dm 2.1.9    released 2010/03/24

- storage participant queries with more than 1 field are now possible


== ruote-dm 2.1.7    released 2010/02/15

- adapted to latest Ruote::StorageHistory
- implemented DmStorage#query_workitems


== ruote-dm 2.1.6    released 2010/02/07

- first release
